--- a/THANKS
+++ b/THANKS
@@ -1,3 +1,4 @@
+  - Thanks to Chris Beck <https://github.com/cbeck88> for contributing support for tracing metadata as RFC5424 Structured Data
   - Thanks to elrafloon <https://github.com/elrafoon> for contributing
   - Thanks to Stanislav Ravas <https://github.com/elrafoon> for contributing
   - Thanks to Dirk Vanden Boer <https://github.com/dirkvdb> for contributing
